test/end-to-end/parse-errors/enum-missing-name-value.crow
e enum
	= 1
	x =
	=
